--- a/ecodrip_account/views/print_check.xml
+++ b/ecodrip_account/views/print_check.xml
@@ -8,7 +8,7 @@
 
     <template id="ckus_check_inherit_ecodrip" inherit_id="l10n_us_check_printing.ckus_check">
         <xpath expr="//div[hasclass('ckus_memo')]" position="after">
-            <img class="ckus_signature" t-att-src="image_data_uri(page['company'].account_check_signature_image)"/>
+            <img class="ckus_signature" t-att-src="image_data_uri(page['company'].account_check_signature_image)" t-if="page['company'].account_check_signature_image"/>
         </xpath>
     </template>
 
