--- a/ecodrip_sale_account/views/account_invoice_views.xml
+++ b/ecodrip_sale_account/views/account_invoice_views.xml
@@ -6,8 +6,8 @@
     
     <record id="x_view_account_invoice_form_inherit_ecodrip" model="ir.ui.view">
       <field name="name">account_invoice_form_ecodrip</field>
-      <field name="model">account.invoice</field>
-      <field name="inherit_id" ref="account.invoice_form" />
+      <field name="model">account.move</field>
+      <field name="inherit_id" ref="account.view_move_form" />
       <field name="arch" type="xml">
 	<xpath expr="//div[@name='button_box']" position="inside">
 	  <field name="x_apr_count" invisible="1"/>
