--- a/ecodrip_sale_account/views/account_move_views.xml
+++ b/ecodrip_sale_account/views/account_move_views.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
   <data noupdate="0">
-    <!-- adding menu item to the invoice view -->
+    <!-- adding menu item to the move view -->
     <menuitem id="x_menu_run_apr_ecodrip" name="Run APR" action="x_action_run_apr_ecodrip" parent="account.menu_finance_receivables" sequence="500"/>
     
-    <record id="x_view_account_invoice_form_inherit_ecodrip" model="ir.ui.view">
-      <field name="name">account_invoice_form_ecodrip</field>
-      <field name="model">account.invoice</field>
-      <field name="inherit_id" ref="account.invoice_form" />
+    <record id="x_view_account_move_form_inherit_ecodrip" model="ir.ui.view">
+      <field name="name">account.move.form.ecodrip</field>
+      <field name="model">account.move</field>
+      <field name="inherit_id" ref="account.view_move_form" />
       <field name="arch" type="xml">
 	<xpath expr="//div[@name='button_box']" position="inside">
 	  <field name="x_apr_count" invisible="1"/>
