--- a/ecodrip_sale_account/views/account_move_views.xml
+++ b/ecodrip_sale_account/views/account_move_views.xml
@@ -1,29 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
 <odoo>
-  <data noupdate="0">
-    <!-- adding menu item to the move view -->
-    <menuitem id="x_menu_run_apr_ecodrip" name="Run APR" action="x_action_run_apr_ecodrip" parent="account.menu_finance_receivables" sequence="500"/>
-    
-    <record id="x_view_account_move_form_inherit_ecodrip" model="ir.ui.view">
-      <field name="name">account.move.form.ecodrip</field>
-      <field name="model">account.move</field>
-      <field name="inherit_id" ref="account.view_move_form" />
-      <field name="arch" type="xml">
-	<xpath expr="//div[@name='button_box']" position="inside">
-	  <field name="x_apr_count" invisible="1"/>
-	  <button type="object" string="" name="action_open_apr_tree_view" class="oe_stat_button" icon="fa-list" attrs="{'invisible': [('x_apr_count', '=', 0)]}">
-	    <field name="x_apr_count" string="APR" widget="statinfo"/>
-	  </button>
-	</xpath>
-	<xpath expr="//field[@name='partner_id']" position="before">
-	  <field name="x_invoice_id" attrs="{'invisible': [('x_invoice_id', '=', False)]}" readonly="True"/>
-	</xpath>
-	<!-- <xpath expr="//field[@name='tax_line_ids']" position="after"> -->
-	<!--     <field name="x_apr_ids" attrs="{'invisible': [('x_apr_ids', '=', False)]}" readonly="True"/> -->
-	<!-- </xpath> -->
-      </field>
-    </record>
-    
-  </data>
-  
+	<data noupdate="0">
+		<!-- adding menu item to the move view -->
+		<menuitem id="x_menu_run_apr_ecodrip" name="Run APR" action="x_action_run_apr_ecodrip" parent="account.menu_finance_receivables" sequence="500"/>
+		
+		<record id="x_view_account_move_form_inherit_ecodrip" model="ir.ui.view">
+			<field name="name">account.move.form.ecodrip</field>
+			<field name="model">account.move</field>
+			<field name="inherit_id" ref="account.view_move_form" />
+			<field name="arch" type="xml">
+				<xpath expr="//div[@name='button_box']" position="inside">
+					<field name="x_apr_count" invisible="1"/>
+					<button type="object" string="" name="action_open_apr_tree_view" class="oe_stat_button" icon="fa-list" attrs="{'invisible': [('x_apr_count', '=', 0)]}">
+						<field name="x_apr_count" string="APR" widget="statinfo"/>
+					</button>
+				</xpath>
+				<xpath expr="//field[@name='partner_id']" position="before">
+					<field name="x_invoice_id" attrs="{'invisible': [('x_invoice_id', '=', False)]}" readonly="False"/>
+				</xpath>
+			</field>
+		</record>
+	</data>
 </odoo>
